[gd_scene load_steps=4 format=2]

[ext_resource path="res://MainMenu/UIButtonBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://MainMenu/MainUITheme.tres" type="Theme" id=2]
[ext_resource path="res://MainMenu/SaveHolder.gd" type="Script" id=3]

[node name="SaveHolder" type="VBoxContainer" groups=["TransitionTarget"]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -696.0
margin_bottom = -320.0
rect_min_size = Vector2( 328, 280 )
script = ExtResource( 3 )

[node name="InputTitle" type="Label" parent="."]
margin_right = 328.0
margin_bottom = 23.0
rect_min_size = Vector2( 328, 23 )
theme = ExtResource( 2 )
text = "Save Name"
align = 1

[node name="LoadHold" type="Control" parent="."]
margin_top = 27.0
margin_right = 328.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 23 )

[node name="LoadButton" parent="LoadHold" instance=ExtResource( 1 )]
margin_left = 82.0
margin_right = 246.0
margin_bottom = 23.0
text = "Load"

[node name="DeleteHold" type="Control" parent="."]
margin_top = 54.0
margin_right = 328.0
margin_bottom = 77.0
rect_min_size = Vector2( 0, 23 )

[node name="DeleteButton" parent="DeleteHold" instance=ExtResource( 1 )]
margin_left = 82.0
margin_right = 246.0
margin_bottom = 23.0
text = "Delete"

[node name="DeleteTimer" type="Timer" parent="DeleteHold/DeleteButton"]
one_shot = true

[node name="InfoHold" type="Control" parent="."]
margin_top = 81.0
margin_right = 328.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 23 )

[node name="MoreInfoButton" parent="InfoHold" instance=ExtResource( 1 )]
margin_left = 82.0
margin_right = 246.0
margin_bottom = 23.0
text = "Show More Info"

[node name="Timer" type="Timer" parent="InfoHold/MoreInfoButton"]
one_shot = true

[node name="SaveSeed" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_top = 108.0
margin_right = 328.0
margin_bottom = 131.0
rect_min_size = Vector2( 328, 23 )
theme = ExtResource( 2 )
text = "Save Seed"
align = 1

[node name="SaveMods" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_top = 135.0
margin_right = 328.0
margin_bottom = 158.0
rect_min_size = Vector2( 328, 23 )
theme = ExtResource( 2 )
text = "Save Modifications"
align = 1
autowrap = true

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="LoadHold/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="DeleteHold/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="timeout" from="DeleteHold/DeleteButton/DeleteTimer" to="." method="_on_DeleteTimer_timeout"]
[connection signal="pressed" from="InfoHold/MoreInfoButton" to="." method="_on_MoreInfoButton_pressed"]
[connection signal="timeout" from="InfoHold/MoreInfoButton/Timer" to="." method="_on_Timer_timeout"]
